--- a/index.html
+++ b/index.html
@@ -2,52 +2,78 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Connect to Wi-Fi</title>
   <style>
     body {
-      background-color: #fff;
+      background-color: #f5f5f5;
       font-family: Arial, sans-serif;
-      padding: 2rem;
-      max-width: 600px;
-      margin: auto;
-      color: #222;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
     }
+
+    .container {
+      background: white;
+      padding: 40px;
+      border-radius: 15px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+
     h1 {
-      font-size: 1.6rem;
-      margin-bottom: 1rem;
+      font-size: 36px;
+      margin-bottom: 20px;
     }
-    .info {
-      background-color: #f3f3f3;
-      border-left: 4px solid #4CAF50;
-      padding: 1rem;
-      word-break: break-word;
+
+    p {
+      font-size: 24px;
+      margin: 10px 0;
     }
-    .label {
+
+    .password {
       font-weight: bold;
-      margin-top: 0.5rem;
+      background-color: #eee;
+      padding: 10px;
+      border-radius: 8px;
+      font-size: 24px;
     }
-    .copy-box {
-      margin-top: 1rem;
-      padding: 0.8rem;
-      background: #e8e8e8;
-      border-radius: 6px;
-      font-family: monospace;
-      user-select: all;
+
+    button {
+      margin-top: 20px;
+      padding: 12px 24px;
+      font-size: 20px;
+      border: none;
+      border-radius: 8px;
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-  <h1>Hello! Connect to Wi-Fi:</h1>
-
-  <div class="info">
-    <div class="label">SSID:</div>
-    Imad Home
-
-    <div class="label">Password:</div>
-    <div class="copy-box">123@456$78</div>
-
-    <p>Copy and paste the password to connect.</p>
+  <div class="container">
+    <h1>Connect to Wi-Fi</h1>
+    <p><strong>SSID:</strong> Imad Home</p>
+    <p><strong>Password:</strong></p>
+    <div class="password" id="wifi-password">123@456$78</div>
+    <button onclick="copyPassword()">Copy Password</button>
   </div>
+
+  <script>
+    function copyPassword() {
+      const password = document.getElementById("wifi-password").innerText;
+      navigator.clipboard.writeText(password).then(() => {
+        alert("Password copied to clipboard!");
+      }).catch(() => {
+        alert("Failed to copy. Try manually selecting it.");
+      });
+    }
+  </script>
 </body>
 </html>
