--- a/index.html
+++ b/index.html
@@ -1,58 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Connect to Wi-Fi</title>
+  <title>Wi-Fi Info</title>
   <style>
     body {
-      background-color: #f5f5f5;
+      background-color: #f4f4f4;
       font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-
-    .container {
-      background: white;
-      padding: 40px;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
       text-align: center;
+      margin: 0;
+      padding: 0;
     }
-
+    .container {
+      background-color: white;
+      width: 90%;
+      max-width: 500px;
+      margin: 100px auto;
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    }
     h1 {
-      font-size: 36px;
+      font-size: 32px;
       margin-bottom: 20px;
     }
-
     p {
-      font-size: 24px;
+      font-size: 22px;
       margin: 10px 0;
+      word-wrap: break-word;
     }
-
-    .password {
-      font-weight: bold;
-      background-color: #eee;
-      padding: 10px;
-      border-radius: 8px;
-      font-size: 24px;
-    }
-
-    button {
-      margin-top: 20px;
+    #copyButton {
+      margin-top: 25px;
       padding: 12px 24px;
       font-size: 20px;
-      border: none;
-      border-radius: 8px;
-      background-color: #007bff;
+      background-color: #4CAF50;
       color: white;
+      border: none;
+      border-radius: 10px;
       cursor: pointer;
     }
-
-    button:hover {
-      background-color: #0056b3;
+    #copyButton:hover {
+      background-color: #45a049;
     }
   </style>
 </head>
@@ -60,18 +47,15 @@
   <div class="container">
     <h1>Connect to Wi-Fi</h1>
     <p><strong>SSID:</strong> Imad Home</p>
-    <p><strong>Password:</strong></p>
-    <div class="password" id="wifi-password">123@456$78</div>
-    <button onclick="copyPassword()">Copy Password</button>
+    <p><strong>Password:</strong> <span id="wifiPass">123@456$78</span></p>
+    <button id="copyButton" onclick="copyPassword()">Copy Password</button>
   </div>
 
   <script>
     function copyPassword() {
-      const password = document.getElementById("wifi-password").innerText;
-      navigator.clipboard.writeText(password).then(() => {
+      const passText = document.getElementById("wifiPass").innerText;
+      navigator.clipboard.writeText(passText).then(() => {
         alert("Password copied to clipboard!");
-      }).catch(() => {
-        alert("Failed to copy. Try manually selecting it.");
       });
     }
   </script>
