--- a/index.html
+++ b/index.html
@@ -1,61 +1,96 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Wi-Fi Info</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Connect to Wi-Fi</title>
   <style>
     body {
-      background-color: #f4f4f4;
       font-family: Arial, sans-serif;
-      text-align: center;
+      background-color: #ffffff;
+      color: #000000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      min-height: 100vh;
       margin: 0;
-      padding: 0;
+      padding: 20px;
     }
+
     .container {
-      background-color: white;
-      width: 90%;
-      max-width: 500px;
-      margin: 100px auto;
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+      background-color: #f0f0f0;
+      border-radius: 15px;
+      padding: 30px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      max-width: 600px;
+      width: 100%;
+      text-align: center;
     }
+
     h1 {
       font-size: 32px;
       margin-bottom: 20px;
     }
-    p {
-      font-size: 22px;
-      margin: 10px 0;
-      word-wrap: break-word;
+
+    .info {
+      font-size: 24px;
+      margin-bottom: 10px;
     }
-    #copyButton {
-      margin-top: 25px;
-      padding: 12px 24px;
-      font-size: 20px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
+
+    .password {
+      font-size: 28px;
+      font-weight: bold;
+      background-color: #ffffff;
+      padding: 10px 20px;
       border-radius: 10px;
+      margin-bottom: 20px;
+      display: inline-block;
+    }
+
+    button {
+      font-size: 20px;
+      padding: 12px 24px;
+      border: none;
+      border-radius: 8px;
+      background-color: #007aff;
+      color: white;
       cursor: pointer;
     }
-    #copyButton:hover {
-      background-color: #45a049;
+
+    button:hover {
+      background-color: #005fc1;
+    }
+
+    #instructions {
+      display: none;
+      margin-top: 25px;
+      font-size: 20px;
+      color: #333;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Connect to Wi-Fi</h1>
-    <p><strong>SSID:</strong> Imad Home</p>
-    <p><strong>Password:</strong> <span id="wifiPass">123@456$78</span></p>
-    <button id="copyButton" onclick="copyPassword()">Copy Password</button>
+    <div class="info">SSID: <strong>Imad Home</strong></div>
+    <div class="info">Password:</div>
+    <div id="wifi-password" class="password">123@456$78</div><br>
+    <button onclick="copyPassword()">Copy Password</button>
+    <p id="instructions">
+      ✅ Password copied!<br><br>
+      📱 On your iPhone, go to <strong>Settings &gt; Wi-Fi</strong>,<br>
+      tap “Imad Home” and paste the password.
+    </p>
   </div>
 
   <script>
     function copyPassword() {
-      const passText = document.getElementById("wifiPass").innerText;
-      navigator.clipboard.writeText(passText).then(() => {
-        alert("Password copied to clipboard!");
+      const password = document.getElementById("wifi-password").innerText;
+      navigator.clipboard.writeText(password).then(() => {
+        document.getElementById("instructions").style.display = "block";
+      }).catch(err => {
+        alert("Failed to copy. Try manually selecting the password.");
       });
     }
   </script>
